# fastapi-sqla-fancy-core-example-app

./: .gitignore  README.md  app.py  db.py  pyproject.toml  tables.py
src/: app.py  app_1_hidden_context.py  app_2_decorator.py  app_2_dependency_injection.py  app_3_optional_param.py  db.py  schemas.py  tables.py
tests/: test_atomicity.py  test_atomicity1.py  test_atomicity2.py  test_atomicity3.py  test_connectionless_call.py  wrk.lua
